force-app/main/default/objects/Common_Carrier_Address__mdt/Common_Carrier_Address__mdt.object-meta.xml
<CustomObject>
    <label>Common Carrier Address</label>
    <pluralLabel>Common Carrier Addresses</pluralLabel>
</CustomObject>