force-app/main/default/objects/Common_Carrier_Address__mdt/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <label>Store</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>