force-app/main/default/objects/Common_Carrier_Address__mdt/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <label>Zip</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>